--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">FamillySpandings</string>
+    <string name="app_name">Family Spending</string>
+    <string name="login">Sign in</string>
+    <string name="registration">Registration</string>
 </resources>
