--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="authorization">Authorization</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="family_name">Family Name</string>
+    <string name="name">Name</string>
+    <string name="repeat_password">Repeat Password</string>
     <string name="forget_password">Forgot Password?</string>
+    <string name="privacy_policy_start">By clicking on \'Register\', you indicate that you have read and agreed with our</string>
+    <string name="privacy_policy_end">Privacy Policy.</string>
 </resources>
