--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="name">Name</string>
     <string name="repeat_password">Repeat Password</string>
     <string name="forget_password">Forgot Password?</string>
+    <string name="wrong_password">Wrong email or password.</string>
     <string name="privacy_policy_start">By clicking on \'Register\', you indicate that you have read and agreed with our</string>
     <string name="privacy_policy_end">Privacy Policy.</string>
+    <string name="empty" />
 </resources>
