Add Statistics with Pie Chart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="spending_details_amount">Amount</string>
     <string name="spending_name">Name</string>
     <string name="spending_add_detail_hint">Add bill component</string>
+    <string name="statistics">Statistics</string>
+    <string name="this_month_spending_s_title">This month spending\'s</string>
 </resources>
