--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,8 @@
     <string name="budget_family">Family</string>
     <string name="budget_balance">Balance</string>
     <string name="budget_for_month_label">Till end of the month</string>
+    <string name="budget_planned_budget">Planned budget</string>
+    <string name="budget_spent">Spent</string>
+    <string name="budget_label_total">Total</string>
+    <string name="budget_planned_spendings">Planned spendings</string>
 </resources>
