--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="category">Category:</string>
     <string name="empty" />
     <string name="spending_information">Information</string>
+    <string name="spendings_no_spendings_message">There is no spendings made yet, start by adding one.</string>
     <string name="spending_details">Details</string>
     <string name="spending_details_naming">Naming</string>
     <string name="spending_details_amount">Amount</string>
