Added planned spending payed. Fixed list update after saving of Sepnding, fixed bug in canceling gallery image picker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="photo_chooser_gallery">Gallery</string>
     <string name="photo_chooser_camera">Photo</string>
     <string name="date">Date</string>
+    <string name="spending_mark_purchased">Mark purchased</string>
 
 </resources>
